// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth Actions creates a SET_ACCESS_TOKEN action 1`] = `
Object {
  "payload": "testToken",
  "type": "SET_ACCESS_TOKEN",
}
`;

exports[`Auth Actions creates a SIGN_OUT action 1`] = `
Object {
  "type": "SIGN_OUT",
}
`;

exports[`Auth Actions creates an action to Login 1`] = `
Array [
  Object {
    "type": "LOGIN__START",
  },
  Object {
    "meta": undefined,
    "payload": Object {
      "_id": "testId",
      "accessToken": "testToken",
      "authMethod": 1,
      "email": "test@mail.com",
      "nickname": "testNick",
      "password": "password",
    },
    "type": "LOGIN",
  },
]
`;

exports[`Auth Actions creates an action to Signup 1`] = `
Array [
  Object {
    "type": "SIGNUP__START",
  },
  Object {
    "meta": undefined,
    "payload": Object {
      "accessToken": "testToken",
      "user": Object {
        "_id": "testId",
        "authMethod": 1,
        "email": "test@mail.com",
        "nickname": "testNick",
        "password": "password",
      },
    },
    "type": "SIGNUP",
  },
]
`;

exports[`Auth Actions creates an action to reset password 1`] = `
Array [
  Object {
    "type": "PASSWORD_RESET__START",
  },
  Object {
    "meta": undefined,
    "payload": true,
    "type": "PASSWORD_RESET",
  },
]
`;

exports[`Auth Actions creates an action when Login is unsuccessful 1`] = `
Array [
  Object {
    "type": "LOGIN__START",
  },
  Object {
    "error": true,
    "meta": undefined,
    "payload": [Error: api server error],
    "type": "LOGIN__ERROR",
  },
]
`;

exports[`Auth Actions creates an action when Login returns a server error 1`] = `
Array [
  Object {
    "type": "LOGIN__START",
  },
  Object {
    "error": true,
    "meta": undefined,
    "payload": [Error: Unexpected error. Please try again later.],
    "type": "LOGIN__ERROR",
  },
]
`;

exports[`Auth Actions creates an action when Signup is unsuccessful 1`] = `
Array [
  Object {
    "type": "SIGNUP__START",
  },
  Object {
    "error": true,
    "meta": undefined,
    "payload": [Error: api server error],
    "type": "SIGNUP__ERROR",
  },
]
`;

exports[`Auth Actions creates an action when Signup returns a server error 1`] = `
Array [
  Object {
    "type": "SIGNUP__START",
  },
  Object {
    "error": true,
    "meta": undefined,
    "payload": [Error: Unexpected error. Please try again later.],
    "type": "SIGNUP__ERROR",
  },
]
`;

exports[`Auth Actions creates an action when resetting password is unsuccessful 1`] = `
Array [
  Object {
    "type": "PASSWORD_RESET__START",
  },
  Object {
    "error": true,
    "meta": undefined,
    "payload": [Error: api server error],
    "type": "PASSWORD_RESET__ERROR",
  },
]
`;

exports[`Auth Actions creates an action when resetting password returns a server error 1`] = `
Array [
  Object {
    "type": "PASSWORD_RESET__START",
  },
  Object {
    "error": true,
    "meta": undefined,
    "payload": [Error: Unexpected error. Please try again later.],
    "type": "PASSWORD_RESET__ERROR",
  },
]
`;
